K8s/host-volume.yaml
``` yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
    spec:
      volumes:
      - name: mysql-data
        hostPath:
          path: /data/mysql
          type: DirectoryOrCreate
      containers:
      - image: mysql
        name: mysql
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql

status: {}

```
