K8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: flask-service
spec:
  selector:
    app: flask
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
